--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ h1{
     text-shadow: 7px 7px 7px rgb(195, 194, 194);
 }
 
+
 .Card{
     width: 400px;
     height: 150px;
@@ -37,23 +38,48 @@ h1{
     transform: scale(1.05);
 }
 
+
+#math{
+    width: 500px;
+    justify-content: center;
+    align-items: center;
+    margin: 120px;
+}
+
+.display{
+    width: inherit;
+    font-size: 18px;
+    margin-bottom: 10px;
+    text-align: right;
+    background-color: rgb(31, 111, 78);
+    border: 4px solid white;
+}
+
 .calculate {
     display: grid;
     grid-template-columns: repeat(4, 1fr); 
     grid-template-rows: repeat(4, 1fr);
     gap: 20px;
+    width: 100%;
+}
+
+input{
+    background-color: rgb(31, 111, 78);
+    width: 100%;
+    color: aliceblue;
     padding: 20px;
 }
 
-li{
+button{
     list-style: none;
     font-size: larger;
     font-weight: bold;
     padding: 30px;
+    background-color: palegreen;
 }
 
-li:hover{
-    background-color: rgb(47, 167, 113);
+button:hover{
+    background-color: rgb(31, 78, 5);
 }
 
 .button {
@@ -71,7 +97,3 @@ li:hover{
     grid-column: span 2;
 }
 
-#math{
-    width: 300px;
-    height: 300px;
-}
